fix: missing channel/show messages in MessageLoader
- added missing CHANNEL_* and SHOW_* message keys
- fixed config desync caused by outdated message.json